bad/bin_op_lth_bool_array.example_compiler_output
ERROR
[1mbad/bin_op_lth_bool_array.lat:3:7: [1;31merror: [0;1moperator < is defined only for int values and string values, not `boolean` and `int[]`[m
	true < new int[3];
	     [1;32m^[m
